[tool.poetry]
name = "Project Olympus"
version = "0.1.0"
description = "AI Personas"
authors = ["AJ Condon, Clayton Sandham"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.28.8"
crewai_tools = "^0.1.6"
langchain-openai = "*"
langchain-community = "^0.0.29"
python-dotenv = "^1.0.1"
requests = "^2.31.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"